<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Your App</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="importance">Importance</string>
    <string name="update_title">Update the note</string>
    <string name="add_title">Add a note</string>
    <string name="select_image">Select Image</string>
    <string name="save_note">Save Note</string>
    <string name="update_note">Update Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="add_note">Add Note</string>
    <string name="note_image">Note Image</string>
    <string name="date_time">Date and Time</string>
</resources>